--- a/main.css
+++ b/main.css
@@ -133,35 +133,75 @@ body{
     content: "\f00c";
     color: white;
 }
-.task .delete {
-    display: block;
+
+.task .options-box {
+    display: flex;
     background-color: transparent;
     padding: 5px;
     border: 2px solid transparent;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: 0.5s;
+   
     text-decoration: none;
+}
+.options-box div{
     width: 30px;
     height: 30px;
     /* margin-left: 5px; */
     display: grid;
     place-items: center;
     font-size: 16px;
+    border-radius: 50%;
+    transition: 0.5s;
+    cursor: pointer;
 }
-.task.done .delete i{
+.task.done .options-box i{
     text-decoration: none;
 }
-.delete:hover {
+.options-box .delete-option:hover {
     background-color: rgb(238, 63, 0);
     color: white;
 }
-
+.options-box .edit-option:hover {
+    background-color: rgb(112, 172, 0);
+    color: white;
+}
 .text {
     max-width: 80%;
     overflow-wrap: break-word;
 }
-
+.edit-page{
+    display: none;
+}
+.edit-page.active{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(64, 54, 58, 0.9);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.edit-page form{
+    width: 100%;
+}
+.form :is(.edit-btn, .cancel-btn){
+    width: 70px;
+    padding: 7px 0;
+    background-color: var(--primary);
+    color: white;
+    border: 2px solid transparent;
+    border-radius: 3px;
+    font-weight: bold;
+    transition: 0.3s;
+    cursor: pointer;
+}
+.form :is(.edit-btn, .cancel-btn):hover{
+    transform: scale(1.1);
+}
+.form .cancel-btn{
+    background-color: #90ACB8;
+}
 @media (max-width: 700px) {
     .container  {
         width: 450px;
