--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body{
 }
 .container {
     width: 600px;
-    margin: 80px auto;
+    margin: 30px auto;
     display: flex;
     flex-direction: column;
     padding: 10px;
@@ -206,4 +206,73 @@ body{
     .container  {
         width: 450px;
     }
+}
+
+/* copyrights */
+
+.copyrights{
+    display: flex;
+    background-color: var(--primary);
+    /* width: 130px; */
+    padding: 5px;
+    border-radius: 5px;
+    position: relative;
+    cursor: pointer;
+    transition: 0.3s;
+    overflow: hidden;
+    margin: 0 auto 70px auto;
+    width: 250px;
+    justify-content: center;
+}
+.copyrights .text{
+    font-size: 14px;
+    text-align: center;
+    line-height: 1.4;
+}
+
+.copyrights .text span{
+    color: white;
+    font-weight: 700;
+}
+
+.copyrights .icons{
+    overflow: hidden;
+    width: 0;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: white;
+    transition: 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    color: var(--background-color);
+    border-radius: 5px;
+}
+.copyrights .icons a {
+    text-decoration: none;
+}
+.copyrights .icons a i {
+    color: black;
+    font-size: 24px;
+    transition: color 0.3s;
+}
+.copyrights .icons a i:hover {
+    color:var(--primary);
+} 
+.copyrights::before {
+    content: "";
+    width: 10px;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: white;
+    border-radius: 5px 0 0 5px;
+}
+
+.copyrights:hover .icons {
+    width: 100%;
 }
